Bug 1699599 - Ignore ruby annotations for find by default. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D134938